--- a/LanguageTrainer.Resources/Res.resx
+++ b/LanguageTrainer.Resources/Res.resx
@@ -121,20 +121,20 @@
     <value>Bing: </value>
   </data>
   <data name="Chinese" xml:space="preserve">
-    <value>Chiński</value>
+    <value>Chinese</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Chinese1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Chinese.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="English" xml:space="preserve">
-    <value>Angielski</value>
+    <value>English</value>
   </data>
   <data name="English1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\English.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="German" xml:space="preserve">
-    <value>Niemiecki</value>
+    <value>German</value>
   </data>
   <data name="German1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\German.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -143,7 +143,7 @@
     <value>Google: </value>
   </data>
   <data name="Polish" xml:space="preserve">
-    <value>Polski</value>
+    <value>Polish</value>
   </data>
   <data name="SpecialSymbols" xml:space="preserve">
     <value>ü ö ä ë β ÷
